--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 MONGOURL=mongodb+srv://akshansh:awasthi@cluster0.w2igqyt.mongodb.net/Voosh?retryWrites=true&w=majority
+SECRET_KEY=fakfdmafadfkdafkadfmadfadfa
